# rustchain-bounties

./: CONTRIBUTING.md  README.md  SUBMISSION.md
bots/: README.md  requirements.txt  weekly_digest_bot.py
bots/bottube/: README.md  __init__.py  glitch_engine.py  test_glitch_engine.py
bottube-telegram-bot/: .env.example  .gitignore  README.md  bottube_bot.py  requirements.txt
bottube-telegram-bot/tests/: __init__.py  test_api.py  test_bot.py
bounties/2309-machine-passport/: README.md  SUBMISSION.md  demo.py  demo_ledger.json  passport_cli.py  passport_generator.py  passport_renderer.py  passport_template.html  requirements.txt  rustchain_client.py
bounties/2309-machine-passport/passports/: index.html  passport_RC-G3-9dRRMiHi-0323.html  passport_RC-G4-9dRRMiHi-0323.html  passport_RC-G5-9dRRMiHi-0323.html  (+2 more)
bounty-2276/: README.md  replay_attack_poc.py  replay_defense.py  requirements.txt  test_replay_defense.py
docs/: BOUNTY_DRAFTS_2026-02-27.md
docs/protocol/: ATTESTATION.md  CRT_LIGHT_ATTESTATION.md
integrations/bottube-telegram-bot/: Dockerfile  README.md  bottube_bot.py  test_bottube_bot.py
rustchain-miner/src/: attestation.rs
rustchain-witness/: .gitignore  Cargo.toml  README.md  demo.sh
rustchain-witness/src/: ascii.rs  commands.rs  format.rs  lib.rs  main.rs  witness.rs
status-dashboard/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  server.js
status-dashboard/public/: app.js  index.html  style.css
submissions/bounty-2310-crt-light-attestation/: README.md
tools/boot-chime/: Cargo.toml  README.md
tools/boot-chime/src/: main.rs
tools/human_scheduler/: INTEGRATION.md  README.md  __init__.py  human_scheduler.py  test_human_scheduler.py
(+8 files in other folders)
